contrast issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -318,10 +318,10 @@ section h2 {
 
 
 footer {
-    background-color: #708090;
-    color:  #fbfaf8;
+    background-color: #445566;
+    color: #fbfaf8;
     padding: 20px 10px;
-    margin-top: 200px;
+    margin-top: 40px;
 }
 
 footer p {
